--- a/03-transcriptomics_data_cleaning.Rmd
+++ b/03-transcriptomics_data_cleaning.Rmd
@@ -195,7 +195,7 @@ readr::write_rds(se, "data/se.rds")
 readr::write_rds(se_KRTAP_filt, "data/se_krtap.rds")
 ```
 
-## Visit 1: differentially expressed genes
+## Baseline differential expression expressed genes
 
 ```{r DGE-V1, cache=TRUE}
 # V1 LSvsNL --------------------
@@ -243,13 +243,12 @@ de_v1_full <- list(de_v1_LSvsNL = de_v1_LSvsNL_result,
 # de_v1_full %>% readr::write_rds("data/de_v1_full.rds")
 ```
 
-## Visit 1: gene set analysis
+## Gene set enrichment analysis
 
 ```{r gsa-prepare-data, cache=TRUE}
-gse121212 <- readr::read_rds("../gse121212/data/DGE_full_model.rds")
+gse121212 <- readr::read_rds("https://rawcdn.githack.com/tuhulab/gse121212/0ba93240d13b753bf32fd0aab0841fb6968b0ea5/data/DGE_full_model.rds")
 gse121212_l <- gse121212$res_shrink
 names(gse121212_l) <- gse121212$contrast
-
 ls_gsa <- 
   c(de_v1_full, gse121212_l) %>% 
   purrr::map(function(df){
